<resources>
    <string name="app_name">GihubUserApp</string>
    <string name="search_user_here">Search User Here</string>
    <string name="something_wrong_image">Something Wrong Image</string>
    <string name="user_avatar">User Avatar</string>
    <string name="user_name">User Name</string>
    <string name="user_description">User Description</string>
    <string name="not_found">Not Found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following_tab">Following</string>
    <string name="followers_tab">Followers</string>
    <string name="loading">Loading...</string>
    <string name="user_full_name">User Full Name</string>
    <string name="username">username</string>
    <string name="_0_following">0 Following</string>
    <string name="_0_followers">0 Followers</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="bookmark">Bookmark</string>
    <string name="following_tab_layout">Following Tab</string>
    <string name="bookmark_page_title">Bookmarked Users</string>
</resources>